plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.17.4'
}

group 'com.huage2580'
version '2.0.2'

sourceCompatibility = 17

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
    maven {
        url "https://maven.aliyun.com/repository/public"
    }
}

dependencies {
    testCompileOnly group: 'junit', name: 'junit', version: '4.13.1'
    implementation group: 'com.github.promeg', name: 'tinypinyin', version: '2.0.3' // TinyPinyin核心包，约80KB
    implementation group: 'org.quartz-scheduler', name: 'quartz', version: '2.5.0', {
     exclude group:'com.zaxxer'
     exclude group:'org.slf4j' // 与idea自带的冲突
     exclude group:'com.mchange'
    }
    compileOnly(group: 'commons-lang', name: 'commons-lang', version: '2.6')
    compileOnly(group: 'org.projectlombok', name: 'lombok', version: '1.18.26')
    annotationProcessor(group: 'org.projectlombok', name: 'lombok', version: '1.18.26')
}

// See https://github.com/JetBrains/gradle-intellij-plugin/
intellij {
    version.set('2024.1.7')
    //intellij.updateSinceUntilBuild true
    //intellij.sameSinceUntilBuild false
}
//patchPluginXml {
//    changeNotes """
//        v1.1 增加了股票的tab，采用腾讯的行情接口，股票轮询间隔10s  <br>
//        v1.2 支持了港股和美股 示例代码：（sh000001,sh600519,sz000001,hk00700,usAAPL）代码一般可以在各网页端看得到  <br>
//        v1.3   支持了IDEA 2020.1.3,兼容到`IDEA 2017.3`，修复macOS 行高问题（不确定 <br>
//        v1.4 增加了隐蔽模式（全拼音和无色涨跌幅
//        v1.5 增加了股票界面的排序~，可按净值和涨跌幅等列排序
//        v1.6 样式修改，增加精确净值（当日，上一交易日
//        v1.7 设置界面样式调整，增加新浪股票接口备选
//      """
//    sinceBuild '173.*' //最低版本限制
//    untilBuild null //最高版本限制 好像必须指定
//}

tasks.withType(JavaCompile) {
    options.encoding = "UTF-8"
}
buildSearchableOptions.enabled = false
